<resources>
    <string name="app_name">Cash King</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="email_">Email</string>
    <string name="error_data_loading">When loading data error has occurred. Check your network connection.</string>
    <string name="msg_loading">Please wait...</string>
    <string name="msg_account_blocked">This account is blocked by Admin.</string>
    <string name="referal_reward">Points Received From Invitation</string>
    <string name="payment">Payment</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_desc">The best way to Earn Money from Cash King App!</string>
    <string name="slide_2_desc">Spin The Wheel to Earn Coins!</string>
    <string name="slide_3_desc">Invite your Friends to Earn More Coins!</string>
    <string name="settings_account_id">account_id</string>
    <string name="settings_file">setting</string>
    <string name="lets_start">Lets get Started</string>
    <string name="invite">Invite Friend Earn More</string>
    <string name="facebook_app_id" translatable="false">602453204860978</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb602453204860978</string>
    <string name="facebook_client_token" translatable="false">a4ac239d9776fce311975b56fd9d1a2e</string>
    <string name="one_signal_app_id" translatable="false">79e8150d-6ad3-4e58-8193-3ed6c03bd665</string>
    <string name="privacy_policy" translatable="false">https://google.com</string>
    <string name="terms_of_service" translatable="false">https://google.com</string>
    <string name="contect_email" translatable="false">abc@mail.com</string>
    <string-array name="login_text">
        <item>Play Games and Win Cash\nRewards</item>
        <item>Earn Coins by Completing Simple\ntask</item>
        <item>Redeem Your Coins for Cash\nRewards</item>
    </string-array>
    <string name="spin_coin_1" translatable="false">5</string>
    <string name="spin_coin_2" translatable="false">7</string>
    <string name="spin_coin_3" translatable="false">15</string>
    <string name="spin_coin_4" translatable="false">10</string>
    <string name="spin_coin_5" translatable="false">20</string>
    <string name="spin_coin_6" translatable="false">5</string>
    <string name="spin_coin_7" translatable="false">100</string>
    <string name="spin_coin_8" translatable="false">1</string>
    <string name="spin_coin_9" translatable="false">50</string>
    <string name="spin_coin_10" translatable="false">10</string>
    <string name="AYET_APP_KEY" translatable="false">4c8d5fe9f6e4a6f29d81ea1a4c8962c7</string>
    <string name="AYET_ADSLOT" translatable="false">offer_wall</string>
    <string name="App_lovin_sdk_key" translatable="false">GgLgSCRJuuwaT0BTcIsnQ1DPOdEioGgavMteEAVnFP4HrKRiBrwhezR0TgSh1L_oOZTelQGMC9PQeSHPsUf8fW</string>
    <string name="default_web_client">28709029561-p16h19ki9ca4gvm3o5oeeolcm23oa1sc.apps.googleusercontent.com</string>
    <string name="slide_three_description" translatable="false">You can redeem your coins\nfor Paytm, Google Play, Pubg UC\nand FreeFire Diamonds etc.</string>
    <string name="slide_three_title" translatable="false">Rewards</string>
    <string name="slide_two_title" translatable="false"><![CDATA[Refer & Earn]]></string>
    <string name="slide_two_description" translatable="false">Best way to earn more coins by\nreferral is to share with your friends\nand family, You both will earn\ngood amount of coins</string>
    <string name="slide_one_title" translatable="false">Play Games</string>
    <string name="slide_one_description" translatable="false">Play games, complete tasks\nand collect coins</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="redeem_detail_text">Software testing is the process of verifying a system with the purpose of identifying any errors, gaps or missing requirement versus the actual requirement. Software testing is broadly categorised into two types - functional testing and non-functional testing.</string>
    <string name="game_points">30</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="password_again">Re-Enter Password</string>
    <string name="login">Login</string>
    <string name="or">------ OR ------</string>
    <string name="didNotSign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="enter_name">Enter Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_title">Enter your registered email id and OTP will be sent. Enter OTP below to reset password.</string>
    <string name="reset">Reset</string>
    <string name="resend_otp">Did not get OTP? Resend</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="change_password">Change Password</string>
    <string name="noAppsFound">No More Apps Found</string>
    <string name="instructions">Instructions</string>
    <string name="super_coin">Available Coins:</string>
    <string name="collect">Collect</string>
    <string name="better_luck">Better Luck Next Time</string>
    <string name="you_won">Congratulation! \nYou Won…</string>
    <string name="read_and_earn"><![CDATA[Read & Earn]]></string>
    <string name="noWebsiteFound">No More Articles Founds</string>
    <string name="scratch">Lucky Scratch</string>
    <string name="didNotSign_up1">Don\'t have an account ? <font color="#f34e71">Sign up here.</font></string>
    <string name="already_have_account">Already have an account? <font color="#f34e71">Sign in.</font></string>
    <string name="welcome_back">Welcome back!</string>
    <string name="ad_attribution">AD</string>
    <string name="share_text">Hey You Know About this App. I have earned 100 Rupees from this app, you also want to earn money so click on link below and download it from play store and use My Refer code to get instant bonus My Refer code is </string>
    <string name="privacy_policy_link">https://www.google.com</string>
    <string name="instruction_link">https://www.google.com</string>
    <string name="about_link">https://www.google.com</string>
    <string name="gmail_id">usalatestnewz@gmail.com</string>
    <string name="daily_checkin_desc">Get daily checkin rewards</string>
    <string name="silver_scratch_desc">Scratch silver card to win</string>
    <string name="platinum_scratch_desc">Scratch platinum card to win</string>
    <string name="gold_scratch_desc">Scratch golden card to win</string>
    <string name="menu_my_wallet_desc">Manage and redeem points</string>
    <string name="refer_more_desc">Refer your friends and earn</string>
    <string name="you_are_blocked">You are Blocked for cheating in this app</string>
    <string name="no_internet_connection">No Internet Connection please check your internet connection.</string>
    <string name="slow_internet_connection">Slow Internet Connection Please Check your Internet Connection</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_wallet">Add</string>
    <string name="okk">OK</string>
    <string name="redeem_tag_line_1">Are You Sure to Redeem your points?</string>
    <string name="redeem_tag_line_2">your number or paypal id is </string>
    <string name="redeem_tag_line_3">and your redeem points are </string>
    <string name="redeem_tag_line_4">and your redeem method is </string>
    <string name="enter_valid_email">Enter valid Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_valid_number">Enter 10 or more Digit Number</string>
    <string name="today_chance_over">Today\'s Chance is over, try again tomorrow</string>
    <string name="login_successfully">Login Successfully…</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_referal_code">Referral Code (optional)</string>
    <string name="have_an_account">Already Have Account ?</string>
    <string name="registration_success">Registration Successfully…</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="comunicate">Communicate</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_about">About Us</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="menu_refer"><![CDATA[Refer & Earn]]></string>
    <string name="exit">Exit</string>
    <string name="share">Share App</string>
    <string name="rate">Rate App</string>
    <string name="faq">Instruction</string>
    <string name="exit_text">Are you sure to exit?</string>
    <string name="yes">Yes</string>
    <string name="not_change_email">You can\'t change email</string>
    <string name="no">No</string>
    <string name="send">Send</string>
    <string name="title">Send Your Questions and Suggestions here</string>
    <string name="emailtitle">Subject</string>
    <string name="message">Message</string>
    <string name="refer_more">Refer &amp; Earn</string>
    <string name="refer">Invite</string>
    <string name="profile">Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="incomplite_profile">Your Profile is Incomplete please update your Profile</string>
    <string name="update_successfully">Update Successfully</string>
    <string name="login_first">Login First</string>
    <string name="total_availiable_points">Total Available Points</string>
    <string name="select_method">Select payment method</string>
    <string name="enter_payment_details">Enter Payment Details</string>
    <string name="menu_my_wallet">My Wallet</string>
    <string name="enter_points">Enter Points</string>
    <string name="submit">Submit</string>
    <string name="today_checkin_over">You Already Collect Today Reward, try again tomorrow</string>
    <string name="redeem_successfully">Redeem Successfully</string>
    <string name="daily_checkin">Daily Reward</string>
    <string name="silver_scratch">Silver Scratch</string>
    <string name="platinum_scratch">Platinum Scratch</string>
    <string name="gold_scratch">Golden Scratch</string>
    <string name="your_refer_code">Your Referral Code</string>
    <string name="tap_copy">Tap to copy</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="position">Position</string>
    <string name="playerName">Player Name</string>
    <string name="winning">Winning</string>
    <string name="change_passord">Submit</string>
    <string name="not_watch_full_video">Ohh ! You not watched full video so points will not be added to your wallet.</string>
    <string name="payment_history">Payment History</string>
    <string name="admob_app_id">ca-app-pub-1150800952190550~6486649898</string>
    <string name="disclaimer_text">Scratch Cash App pays better and faster than any other rewards apps! No gift cards or discounts, you are paid cash in your PayPal account! Scratch CashApp is the best free app for money and rewards!</string>
    <string name="todo">TODO</string>
    <string name="_5">5</string>
</resources>