<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".watchandearn.fragments.ContactFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bg"
            android:layout_width="0dp"
            android:layout_height="@dimen/_120sdp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_bg" />

        <ImageView
            android:id="@+id/back_img_contact"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/bg"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/login_txt_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/menu_contact"
            android:textColor="@color/white"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/bg"
            app:layout_constraintTop_toBottomOf="@+id/back_img_contact" />

        <RelativeLayout
            android:id="@+id/adView_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bg"
            android:background="@color/white"
            android:gravity="center"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bg" />


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@+id/adView_top"
            app:layout_constraintBottom_toTopOf="@+id/adView_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adView_top">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:elevation="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_4sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="@dimen/_4sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:gravity="center"
                        android:text="@string/title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/subject_lyt"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:hint="@string/emailtitle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/subject"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailSubject|textAutoCorrect" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/message_lyt"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/subject_lyt"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:hint="@string/message">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/message"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|top"
                            android:lines="5" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/send_btn"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/message_lyt"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:background="@drawable/btn_bg"
                        android:text="@string/send"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/adView_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/top"
            android:background="@color/white"
            android:gravity="center"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>