<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ad_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@color/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <!--        <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:visibility="gone"-->
        <!--            android:id="@+id/videoContainer"-->
        <!--            android:background="@color/black"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent">-->

        <!--            <com.devbrackets.android.exomedia.ui.widget.VideoView-->
        <!--                android:id="@+id/video_view"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent"-->
        <!--                app:layout_constraintBottom_toBottomOf="parent"-->
        <!--                app:layout_constraintEnd_toEndOf="parent"-->
        <!--                app:layout_constraintStart_toStartOf="parent"-->
        <!--                app:layout_constraintTop_toTopOf="parent"-->
        <!--                app:useDefaultControls="false" />-->

        <!--            <ImageButton-->
        <!--                android:id="@+id/videoButton"-->
        <!--                android:layout_width="40dp"-->
        <!--                android:layout_height="40dp"-->
        <!--                android:layout_marginTop="13dp"-->
        <!--                android:layout_marginEnd="10dp"-->
        <!--                android:background="@android:color/transparent"-->
        <!--                android:contentDescription="TODO"-->
        <!--                app:layout_constraintEnd_toEndOf="@+id/video_view"-->
        <!--                app:layout_constraintTop_toTopOf="@+id/video_view"-->
        <!--                app:srcCompat="@drawable/ic_baseline_volume_off_24"-->
        <!--                app:tint="@color/white" />-->
        <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

        <ImageView
            android:id="@+id/cancel_ad"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_cancel_24"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/count_down"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:background="@drawable/item_bg"
            android:backgroundTint="#E8E3E3"
            android:gravity="center"
            android:text="@string/_5"
            android:textColor="@color/black_70"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ad_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFCC66"
            android:padding="2dp"
            android:text="@string/ad_attribution"
            android:textColor="#505050"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/on_click"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_margin="50sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>