<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/tool"
        layout="@layout/toolbar" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/tool"
        android:background="@drawable/drop_shadow" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divider">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/adView_bottom"
            app:layout_constraintTop_toBottomOf="@+id/adView_top">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_180sdp"
                    android:scaleType="centerInside"
                    android:src="@drawable/refer_earn" />

                <LinearLayout
                    android:id="@+id/msgLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/img"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/card_shadow"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            app:srcCompat="@drawable/ic_wallet"
                            app:tint="@color/colorPrimaryDark" />

                        <TextView
                            android:id="@+id/txtrefercoin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/msgLayout"
                    android:layout_margin="10dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/refer_more"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/your_refer_code"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtcode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/refer_bg"
                        android:padding="@dimen/_5sdp"
                        android:text="aadesh8265"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/txtcopy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="@string/tap_copy"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/txtinvite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/btn_bg"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:paddingStart="50dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="50dp"
                        android:paddingBottom="10dp"
                        android:text="@string/refer"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                </LinearLayout>
            </RelativeLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/adView_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/adView_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>
